fixes: h-screen issue to avoid overflow of content

--- a/output.css
+++ b/output.css
@@ -584,6 +584,22 @@ video {
   height: 100vh;
 }
 
+.h-full{
+  height: 100%;
+}
+
+.max-h-screen{
+  max-height: 100vh;
+}
+
+.min-h-full{
+  min-height: 100%;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
 .w-3{
   width: 0.75rem;
 }
@@ -656,16 +672,16 @@ video {
   align-self: baseline;
 }
 
+.overflow-auto{
+  overflow: auto;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .overflow-scroll{
   overflow: scroll;
-}
-
-.overflow-y-auto{
-  overflow-y: auto;
 }
 
 .whitespace-nowrap{
@@ -713,6 +729,11 @@ video {
 .bg-primary-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-2{
